; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_cik.c_cik_flush_hdp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_cik.c_cik_flush_hdp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { i32 }
%struct.amdgpu_ring = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@mmHDP_MEM_COHERENCY_FLUSH_CNTL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.amdgpu_device*, %struct.amdgpu_ring*)* @cik_flush_hdp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cik_flush_hdp(%struct.amdgpu_device* %0, %struct.amdgpu_ring* %1) #0 {
  %3 = alloca %struct.amdgpu_device*, align 8
  %4 = alloca %struct.amdgpu_ring*, align 8
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %3, align 8
  store %struct.amdgpu_ring* %1, %struct.amdgpu_ring** %4, align 8
  %5 = load %struct.amdgpu_ring*, %struct.amdgpu_ring** %4, align 8
  %6 = icmp ne %struct.amdgpu_ring* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %2
  %8 = load %struct.amdgpu_ring*, %struct.amdgpu_ring** %4, align 8
  %9 = getelementptr inbounds %struct.amdgpu_ring, %struct.amdgpu_ring* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %7, %2
  %15 = load i32, i32* @mmHDP_MEM_COHERENCY_FLUSH_CNTL, align 4
  %16 = call i32 @WREG32(i32 %15, i32 1)
  %17 = load i32, i32* @mmHDP_MEM_COHERENCY_FLUSH_CNTL, align 4
  %18 = call i32 @RREG32(i32 %17)
  br label %23

19:                                               ; preds = %7
  %20 = load %struct.amdgpu_ring*, %struct.amdgpu_ring** %4, align 8
  %21 = load i32, i32* @mmHDP_MEM_COHERENCY_FLUSH_CNTL, align 4
  %22 = call i32 @amdgpu_ring_emit_wreg(%struct.amdgpu_ring* %20, i32 %21, i32 1)
  br label %23

23:                                               ; preds = %19, %14
  ret void
}

declare dso_local i32 @WREG32(i32, i32) #1

declare dso_local i32 @RREG32(i32) #1

declare dso_local i32 @amdgpu_ring_emit_wreg(%struct.amdgpu_ring*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
